link back to github

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -1,6 +1,6 @@
 {{#markdown-convert style='github'}}
 
-  # ui-label
+  # [ui-label](https://github.com/lifegadget/ui-tag)
   > lovely labels (and pills) for your Ember apps
 
   ## Install
