README and travis update

--- a/tests/dummy/app/templates/application.hbs
+++ b/tests/dummy/app/templates/application.hbs
@@ -11,11 +11,9 @@
   ember install ui-tag
   ```
 
-  This will load an **npm** version of the Bootstrap 4.0 library but only include the styling that is needed to render
-  a "pill" or a "label". If you're not using the `ember-cli-sass` addon then it will fall back to including the CSS as just
-  CSS. In this situation you are done, styling should be immediately available.
+  This will load an **npm** version of the Bootstrap 4.0 library but only include the styling that is needed to render a "pill" or a "tag".
 
-  If you _are_ using SASS, then you'll need to include add `@import 'ui-tag';` to your `app.scss` stylesheet. If you want to change any of the bootstrap variables -- like colors, etc. -- then do this before you include the _import_ directive.
+  If you _are_ using SASS, then you'll need to include add `@import 'ui-tag';` to your `app.scss` stylesheet. The SASS integration also allows you to change any of the bootstrap variables -- like colors, etc. -- to modify the look and feel. Just make sure to do this _before_ you include the _import_ directive.
 
   ## Usage
 
@@ -54,7 +52,7 @@
     {{ui-tag 'inline positional'  onClick=(action 'foobar')}}
   </div>
   <div class="flex hbs">
-    <div class="codeblock">\{{ui-tag 'inline positional'}}</div>
+    <div class="codeblock">\{{ui-tag 'inline positional' onClick=(action 'foobar')}}</div>
   </div>
 </div>
 <div class="flex">
