--- a/app/styles/ui-tag.scss
+++ b/app/styles/ui-tag.scss
@@ -2,10 +2,10 @@
 $enable-flex: true;
 
 // @import 'ui-tag/bootstrap/variables';
-@import 'ui-tag/bootstrap-source/mixins/border-radius';
-@import 'ui-tag/bootstrap-source/mixins/hover';
-@import 'ui-tag/bootstrap-source/mixins/tag';
-@import 'ui-tag/bootstrap-source/tags';
+@import 'bootstrap-source/mixins/border-radius';
+@import 'bootstrap-source/mixins/hover';
+@import 'bootstrap-source/mixins/tag';
+@import 'bootstrap-source/tags';
 
 @import 'ui-tag/mood';
 @import 'ui-tag/size';
