--- a/app/styles/ui-tag/size.scss
+++ b/app/styles/ui-tag/size.scss
@@ -1,19 +1,19 @@
-.tag.tiny-size {
+.badge.tiny-size {
   font-size: 0.75rem;
 }
 
-.tag.small-size {
+.badge.small-size {
   font-size: 0.875rem;
 }
 
-.tag.default-size {
+.badge.default-size {
   font-size: 1rem;
 }
 
-.tag.large-size {
+.badge.large-size {
   font-size: 1.25rem;
 }
 
-.tag.huge-size {
+.badge.huge-size {
   font-size: 2rem;
 }
