--- a/addon/templates/components/ui-tag.hbs
+++ b/addon/templates/components/ui-tag.hbs
@@ -1,4 +1,4 @@
-<span class="tag tag-{{_mood}}{{_size}} {{if isPill 'tag-pill'}}{{if clickable ' clickable'}}" onclick={{action 'onClick'}}>
+<span class="badge badge-{{_mood}}{{_size}} {{if isPill 'badge-pill'}}{{if clickable ' clickable'}}" onclick={{action 'onClick'}}>
   {{#if hasBlock}}
     {{yield}}
   {{else}}
